# RustyLeague

./: Cargo.toml  README.md  kek.txt
src/: io.rs  lib.rs  structures.rs  utilities.rs
src/IO/: binary_reader.rs  world_geometry.rs
src/Structures/: r3d_box.rs  r3d_sphere.rs  vector2.rs  vector3.rs
src/io/: bin.rs  binary_reader.rs  binary_writer.rs  release_manifest.rs  simple_environment.rs  simple_skin.rs  static_object.rs  world_geometry.rs
src/structures/: box3d.rs  color.rs  color_rgba.rs  matrix44.rs  r3d_box.rs  r3d_sphere.rs  render_bucket_grid.rs  sphere.rs  vector2.rs  vector3.rs  vector4.rs
src/utilities/: directx9.rs  hashing.rs  version.rs
src/utilities/directx9/: d3dformat.rs
test_files/: aatrox_base_w_ground_ring.scb  aatrox_write.skn
