[package]
name = "rusty_league"
version = "0.1.0"
authors = ["Crauzer <filip.quitko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = { version = "0.5.1", features = ["bindgen"]}
bitflags = "1.2.1"
palette = "0.5.0"
num-traits = "0.2"
num-derive = "0.3"